Fixing bugs: login, error handling.

--- a/webapp/src/main/webapp/css/heroic-features.css
+++ b/webapp/src/main/webapp/css/heroic-features.css
@@ -34,6 +34,14 @@ html, body {
   margin-bottom: 30px;
 }
 
+.g-signin2{
+  width: 100%;
+}
+
+.g-signin2 > div{
+  margin: 0 auto;
+}
+
 .jumbotron {
   background-image: url("../images/city-view.jpg");
   background-size: cover;
