front improvements in admin panel, clear some unused code, ready to check

--- a/webapp/src/main/webapp/css/heroic-features.css
+++ b/webapp/src/main/webapp/css/heroic-features.css
@@ -140,3 +140,11 @@ html, body {
 .ad-description {
     margin-top: 40px;
 }
+
+.ads-list {
+    margin: 15px 0;
+}
+
+.tab-content {
+    padding-top: 20px;
+}
